style fixes to control condition prompt so that it doesn't disappear if it's too long

--- a/client/hcomp/ideateControl.css
+++ b/client/hcomp/ideateControl.css
@@ -6,7 +6,7 @@
     position: absolute;
     top: 65px;
     left: 0;
-    background-color: "#FFF",
+    background-color: "#FFF";
     padding: "10px";
     /*font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;*/
 }
@@ -20,6 +20,7 @@
 
 .hcomp-ideation-pane-control .ideation-prompt-control-container {
     text-align: center;
+    /*height: 100%;*/
     /* position: absolute; */
     /* top: 0; */
     /* left: 0; */
@@ -27,11 +28,14 @@
 }
 
 .hcomp-ideation-pane-control .ideation-prompt-control {
-    position: absolute;
-    top: 0;
-    left: 30%;
-    right: 30%;
+    /*position: absolute;*/
+    /*top: 0;*/
+    /*left: 30%;*/
+    /*right: 30%;*/
+    padding-left: 27%;
+    padding-right: 27%;
     text-align: center;
+    font-size: 1.7em;
     z-index: 20;
 }
 
@@ -46,10 +50,10 @@
     padding-bottom: 10px;
     margin: 0 auto;
     margin-bottom: 5%;
-    position: absolute;
-    top: 7em;
-    left:0;
-    right:0;
+    /*position: absolute;*/
+    /*top: 7em;*/
+    /*left:0;*/
+    /*right:0;*/
     z-index: 20;
 }
 
